# RECOFACE

./: README.md  manage.py
Backend/: Procfile  db.sqlite3  google.json  manage.py  pyproject.toml
Backend/bare/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
Backend/faces/: a.json  models.py  schema.py  utils.py
Backend/faces/migrations/: 0001_initial.py  0002_auto_20210602_1928.py  0003_landmark.py  0004_image_image_with_face_bound_src.py
Backend/recoface/: urls.py
Frontend/: package-lock.json  package.json
Frontend/public/: index.html
Frontend/src/: App.css  App.js  App.tsx  index.tsx
Frontend/src/Components/: Home.js  HomeElements.js  Navbar.js  NavbarElements.js
Frontend/src/assets/: index.ts
Frontend/src/client/: index.ts
Frontend/src/components/: ImageCard.tsx
Frontend/src/pages/: ImagesAndUpload.tsx
recoface/: asgi.py  settings.py  wsgi.py
